# study

./: .gitignore  README.md  kata.py
R/: notes.R
cpp/: basics.cpp
cpp/sample/: main.cpp
data/: ProductScreener.csv
datacamp/: loss_functions.py  portfolio_analysis.py  portfolio_risk_management.py  quantitative_analyst.R  quantitative_risk_management.py  statistical_thinking.py
finance/statistics/: normality.ipynb
javascript/express-tutorial/: app.js  quandl.js
javascript/react/: base_features.js
kata/: card_flipping_game.py  chicken.py  eight_queens.rb  lzw.py  palindrome.py  vowel_square.rb
kata/advent_of_code/: 2023.py  day17.py
kata/codewars/: sudoku_solver.py  sudoku_validator.py
kata/data-structures/: arrays.py  graphs.py  linear_structures.py  linked_lists.py  (+4 more)
projects/: BTC_cost_averaging.ipynb  axe_game.cpp  backtest.py  chess.py  portfolio_analysis.R  portfolios.py  stock_market_analysis.py
projects/df_to_db/: pyproject.toml
projects/df_to_db/src/df_to_db/: __init__.py  adapters.py
projects/df_to_db/tests/: test_df_to_db.py
projects/python/pocketbase/: pocketbase.py  pyproject.toml
projects/reggr/: .gitignore  Cargo.toml  random_sleep.c  random_sleep.py
projects/reggr/benches/: benches.rs
projects/reggr/scripts/: combine_rust_files.py  generate_test_files.py  test_script.sh
projects/reggr/src/: lib.rs  main.rs
projects/reggr/tests/: reggr.rs
python/: portfolio_risk_management.py  statistical_thinking.py
ruby/: exercises.rb
scripts/: gen_SP500_graph.py  get_prices.py
sql/: db.py  notes.txt
templates/: Makefile  main.cpp  main.py
(+258 files in other folders)
