[project]
name = "df-to-db"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ben Cutrell", email = "bcutrell13@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "duckdb>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/df_to_db"]
