[project]
name = "pocketbase"
version = "0.1.0"
description = "Quick python SDK for pocketbase"
authors = [
    { name = "Ben Cutrell", email = "bcutrell13@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pocketbase.py"]
